crates/test-files/fixtures/compile_errors/string_literal.fe
contract Foo:
    pub fn bar():
        let s: String<16> = "This is
 Invalid"   